--- a/client/src/Components/Sub-Components/ListingBody.css
+++ b/client/src/Components/Sub-Components/ListingBody.css
@@ -420,7 +420,7 @@
                 }
 
             .listingBodyMainLeftAmenitiesListContainer {
-                height: 80%;
+                height: 75%;
                 width: 100%;
                 display: flex;
                 flex-direction: row;
@@ -490,6 +490,7 @@
             justify-content: flex-start;
             align-items: flex-start;
             border-bottom: 1px solid rgba(100, 100, 100, 0.3);
+            -webkit-user-drag: none;
         }
 
             .listingBodyMainLeftCalendarTitleContainer {
@@ -499,11 +500,13 @@
                 flex-direction: row;
                 justify-content: flex-start;
                 align-items: center;
+                -webkit-user-drag: none;
             }
 
                 .listingBodyMainLeftCalendarTitleText {
                     font-size: 20px;
                     font-weight: bold;
+                    -webkit-user-drag: none;
                 }
 
             .listingBodyMainLeftCalendarBodyContainer {
@@ -513,16 +516,33 @@
                 flex-direction: row;
                 justify-content: center;
                 align-items: center;
+                -webkit-user-drag: none;
             }
 
             .listingBodyMainLeftCalendarFooterContainer {
-                height: 20%;
+                height: 15%;
                 width: 100%;
                 display: flex;
                 flex-direction: row;
                 justify-content: flex-start;
                 align-items: center;
+                margin-bottom: 10px;
+                -webkit-user-drag: none;
             }
+
+                .listingBodyMainLeftCalendarFooterText {
+                    font-size: 14px;
+                    font-weight: bold;
+                    text-decoration: underline;
+                    height: 100%;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: flex-end;
+                    align-items: center;
+                    cursor: pointer;
+                    -webkit-user-drag: none;
+                }
 
         .listingBodyMainRightContainer {
             height: 100%;
