more ui progress

--- a/client/src/Components/Sub-Components/HomeHeader.css
+++ b/client/src/Components/Sub-Components/HomeHeader.css
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
     position: sticky;
+    position: -webkit-sticky !important;
     top: 0;
     background-color: white;
     z-index: 100;
