--- a/client/src/Components/Sub-Components/HomeFooter.css
+++ b/client/src/Components/Sub-Components/HomeFooter.css
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
     position: sticky;
+    position: -webkit-sticky !important;
     bottom: 0;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     background-color: white;
