--- a/client/src/Components/Sub-Components/ListingBody.css
+++ b/client/src/Components/Sub-Components/ListingBody.css
@@ -62,7 +62,7 @@
 
                     .fa-solid.fa-star.listingBodyStar {
                         font-size: 12px;
-                        margin-bottom: 1px;
+                        margin-bottom: 2px;
                         margin-right: 2px;
                     }
 
@@ -70,7 +70,7 @@
                         opacity: 0.8;
                         font-size: 10px;
                         margin-left: 5px;
-                        margin-right: 5px;
+                        margin-right: 7px;
                     }
 
                     .listingBodyReviewText {
@@ -85,6 +85,16 @@
                     text-decoration-thickness: 1px;
                     cursor: pointer;
                 }
+
+                .listingBodyReviewCountText2 {
+                    font-size: 13px;
+                    font-weight: bold;
+                    text-decoration: underline;
+                    text-decoration-thickness: 1px;
+                    cursor: pointer;
+                    color: rgba(100, 100, 100, 0.8);
+                }
+
 
                 .listingBodyLocationText {
                     font-size: 13px;
@@ -570,10 +580,84 @@
                 }
 
         .listingBodyMainRightContainer {
-            height: 100%;
+            min-height: 100%;
             width: 33.33%;
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
             align-items: center;
+            align-self: normal;
         }
+
+            .listingBodyMainRightCheckContainer {
+                min-height: 300px;
+                height: 300px;
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: center;
+                border-radius: 10px;
+                box-shadow: 0 0 10px rgba(100, 100, 100, 0.2);
+                position: -webkit-sticky;
+                position: sticky;
+                top: 125px;
+                bottom: 0;
+                padding: 20px;
+            }
+
+            .listingBodyMainRightCheckHeaderContainer {
+                height: 20%;
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+            }
+
+                .listingBodyMainRightCheckHeaderLeft {
+                    height: 100%;
+                    width: 40%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: flex-start;
+                    align-items: center;
+                }
+
+                    .listingBodyMainRightCheckHeaderLeftPriceText {
+                        font-size: 20px;
+                        font-weight: bold;
+                        margin-right: 5px;
+                    }
+
+                    .listingBodyMainRightCheckHeaderLeftNightText {
+                        font-size: 16px;
+                        font-weight: normal;
+                    }
+
+                .listingBodyMainRightCheckHeaderRight {
+                    height: 100%;
+                    width: 60%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: flex-end;
+                    align-items: center;
+                }
+
+            .listingBodyMainRightCheckBodyContainer {
+                height: 60%;
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: center;
+            }
+
+            .listingBodyMainRightCheckButtonContainer {
+                height: 20%;
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+            }
