--- a/client/src/Components/Sub-Components/ListingBody.css
+++ b/client/src/Components/Sub-Components/ListingBody.css
@@ -590,8 +590,8 @@
         }
 
             .listingBodyMainRightCheckContainer {
-                min-height: 300px;
-                height: 300px;
+                min-height: 500px;
+                height: 500px;
                 width: 100%;
                 display: flex;
                 flex-direction: column;
@@ -603,11 +603,12 @@
                 position: sticky;
                 top: 125px;
                 bottom: 0;
-                padding: 20px;
+                padding: 24px;
+                padding-bottom: 0px;
             }
 
             .listingBodyMainRightCheckHeaderContainer {
-                height: 20%;
+                height: 10%;
                 width: 100%;
                 display: flex;
                 flex-direction: row;
@@ -645,7 +646,7 @@
                 }
 
             .listingBodyMainRightCheckBodyContainer {
-                height: 60%;
+                height: 30%;
                 width: 100%;
                 display: flex;
                 flex-direction: column;
@@ -654,10 +655,89 @@
             }
 
             .listingBodyMainRightCheckButtonContainer {
-                height: 20%;
+                height: 10%;
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+            }
+
+                .listingBodyMainRightCheckButton {
+                    height: 100%;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                    text-align: center;
+                    font-size: 15px;
+                    font-weight: bold;
+                    background-color: var(--pink);
+                    color: white;
+                    border-radius: 8px;
+                    cursor: pointer;
+                }
+
+            .listingBodyMainRightCheckDisclaimerText {
+                height: 10%;
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                font-size: 14px;
+                font-weight: lighter;
+            }
+
+            .listingBodyMainRightCheckFeesContainer {
+                height: 25%;
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-evenly;
+                align-items: center;
+            }
+
+                .listingBodyMainRightCheckFeeContainer {
+                    height: 30%;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    align-items: center;
+                }
+
+                .listingBodyMainRightCheckFeeLeft {
+                    height: 100%;
+                    width: 50%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: flex-start;
+                    align-items: center;
+                    font-size: 15px;
+                    text-decoration: underline;
+                    text-decoration-thickness: 1px;
+                }
+
+            .listingBodyMainRightCheckTotalContainer {
+                height: 15%;
                 width: 100%;
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
                 align-items: center;
+                border-top: 1px solid rgba(165, 165, 165, 0.3);
+                margin-top: 10px;
             }
+
+                .listingBodyMainRightCheckTotalLeft {
+                    font-weight: bold;
+                    font-size: 15.5px;
+                }
+
+                .listingBodyMainRightCheckTotalRight {
+                    font-weight: bold;
+                    font-size: 15.5px;
+                }
