--- a/client/src/Components/Sub-Components/ListingBody.css
+++ b/client/src/Components/Sub-Components/ListingBody.css
@@ -605,6 +605,7 @@
                 bottom: 0;
                 padding: 24px;
                 padding-bottom: 0px;
+                border: 1px solid rgba(165, 165, 165, 0.3);
             }
 
             .listingBodyMainRightCheckHeaderContainer {
@@ -652,7 +653,110 @@
                 flex-direction: column;
                 justify-content: space-between;
                 align-items: center;
+                margin-bottom: 20px;
+                margin-top: 10px;
             }
+
+                .listingBodyMainRightCheckBodyContainerMain {
+                    height: 100%;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    border-radius: 8px;
+                    border: 1px solid rgba(100, 100, 100, 0.5);
+                }
+
+                    .listingBodyMainRightCheckBodyContainerMainUpper {
+                        height: 50%;
+                        width: 100%;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: center;
+                        align-items: center;
+                        border-bottom: 1px solid rgba(100, 100, 100, 0.5);
+                        cursor: pointer;
+                        user-select: none;
+                    }
+
+                    .listingBodyMainRightCheckBodyContainerMainUpper:active {
+                        border: 2px solid black;
+                        border-radius: 8px;
+                    }
+
+                        .listingBodyMainRightCheckBodyContainerMainUpperLeft {
+                            height: 100%;
+                            width: 50%;
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: flex-start;
+                            border-right: 1px solid rgba(100, 100, 100, 0.5);
+                            padding: 10px;
+                        }
+
+                            .listingBodyMainRightCheckBodyContainerMainUpperLeftCheckInText {
+                                font-size: 10px;
+                                font-weight: bold;
+                                margin-bottom: 5px;
+                            }
+
+                            .listingBodyMainRightCheckBodyContainerMainUpperLeftCheckInDateText {
+                                font-size: 14px;
+                            }
+
+                        .listingBodyMainRightCheckBodyContainerMainUpperRight {
+                            height: 100%;
+                            width: 50%;
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: flex-start;
+                            padding: 10px;
+                        }
+
+                    .listingBodyMainRightCheckBodyContainerMainLower {
+                        height: 50%;
+                        width: 100%;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: space-between;
+                        align-items: center;
+                        border-top: 1px solid rgba(100, 100, 100, 0.5);
+                        cursor: pointer;
+                        user-select: none;
+                        padding: 10px;
+                    }
+
+                        .listingBodyMainRightCheckBodyContainerMainLowerLeft {
+                            height: 100%;
+                            width: 50%;
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: flex-start;
+                        }
+
+                            .listingBodyMainRightCheckBodyContainerMainLowerLeftGuestsText {
+                                font-size: 10px;
+                                font-weight: bold;
+                                margin-bottom: 5px;
+                            }
+
+                            .listingBodyMainRightCheckBodyContainerMainLowerLeftGuestsNumText {
+                                font-size: 14px;
+                            }
+
+                            .fa-solid.fa-chevron-down.listingBodyMainRightCheckBodyContainerMainLowerLeftChevronDown {
+                                font-size: 16px;
+                                margin-right: 5px;
+                            }
+
+                    .listingBodyMainRightCheckBodyContainerMainLower:active {
+                        border: 2px solid black;
+                        border-radius: 8px;
+                    }
 
             .listingBodyMainRightCheckButtonContainer {
                 height: 10%;
