--- a/client/src/Components/Sub-Components/ListingBody.css
+++ b/client/src/Components/Sub-Components/ListingBody.css
@@ -853,8 +853,8 @@
         justify-content: flex-start;
         align-items: flex-start;
         padding: 40px 0;
-        border-top: 2px solid rgba(165, 165, 165, 0.1);
-        border-bottom: 2px solid rgba(165, 165, 165, 0.1);
+        border-top: 2px solid rgba(165, 165, 165, 0.2);
+        border-bottom: 2px solid rgba(165, 165, 165, 0.2);
     }
 
         .listingBodyReviewsHeaderContainer {
@@ -1093,3 +1093,44 @@
                         align-items: flex-start;
                         margin-top: 20px;
                     }
+
+    .listingBodyMapContainer {
+        height: 700px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        padding-top: 20px;
+        padding-bottom: 60px;
+        border-bottom: 2px solid rgba(165, 165, 165, 0.2);
+    }
+
+        .listingBodyMapHeaderContainer {
+            height: 20%;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+        }
+
+            .listingBodyMapHeaderText1 {
+                font-size: 22px;
+                font-weight: bold;
+                margin-bottom: 25px;
+            }
+
+            .listingBodyMapHeaderText2 {
+                font-size: 16px;
+            }
+
+            .listingBodyMainMapContainer {
+                height: 80%;
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                border-radius: 5px;
+            }
