--- a/client/src/Components/Sub-Components/ListingBody.css
+++ b/client/src/Components/Sub-Components/ListingBody.css
@@ -1134,3 +1134,107 @@
                 align-items: center;
                 border-radius: 5px;
             }
+
+    .listingBodyHostedByContainer {
+        height: 400px;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 30px;
+    }
+
+        .listingBodyHostedByContainerMainLeft {
+            height: 100%;
+            width: 50%;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+        }
+
+        .listingBodyHostedByContainerMainRight {
+            height: 100%;
+            width: 50%;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+        }
+
+            .listingBodyHostedByProfileContainer {
+                height: 20%;
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
+                align-items: center;
+            }
+
+                .listingBodyHostedByContainerLeft {
+                    height: 100%;
+                    width: 10%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: flex-start;
+                    align-items: center;
+                }
+
+                    .listingBodyHostedByProfilePicture {
+                        min-height: 56px;
+                        min-width: 56px;
+                        height: 56px;
+                        width: 56px;
+                        border-radius: 50%;
+                    }
+
+                .listingBodyHostedByContainerRight {
+                    height: 100%;
+                    width: 90%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: flex-start;
+                    margin-left: 15px;
+                }
+
+                    .listingBodyHostedByContainerRightHostedByText {
+                        width: 100%;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: flex-start;
+                        align-items: center;
+                        font-size: 20px;
+                        font-weight: bold;
+                        margin-bottom: 10px;
+                    }
+
+                    .listingBodyHostedByContainerRightDateJoinedText {
+                        width: 100%;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: flex-start;
+                        align-items: center;
+                        font-size: 13px;
+                        color: var(--gray);
+                    }
+
+            .listingBodyHostedByReviewsContainer {
+                height: 10%;
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
+                align-items: center;
+            }
+
+            .fa-solid.fa-star.listingBodyHostedByStar {
+                font-size: 16px;
+                margin-bottom: 2px;
+                margin-right: 10px;
+            }
+
+            .listingBodyReviewText4 {
+                font-size: 15.5px;
+            }
