ui progress pt 2385549

--- a/client/src/Components/Sub-Components/HomeFooter.css
+++ b/client/src/Components/Sub-Components/HomeFooter.css
@@ -15,4 +15,10 @@
     .homeFooterText {
         font-size: 14px;
         color: var(--gray);
+        margin-right: 10px;
+    }
+
+    .fa-linkedin {
+        font-size: 20px;
+        cursor: pointer;
     }
