--- a/client/src/Components/Sub-Components/ListingBody.css
+++ b/client/src/Components/Sub-Components/ListingBody.css
@@ -869,24 +869,23 @@
 
             .listingBodyReviewContainer2 {
                 height: 100%;
-                width: 50px;
+                width: 66px;
                 display: flex;
                 flex-direction: row;
-                justify-content: center;
+                justify-content: flex-start;
                 align-items: center;
             }
 
                 .fa-solid.fa-star.listingBodyStar2 {
                     font-size: 15px;
-                    margin-bottom: 0px;
                     margin-right: 7px;
                 }
 
                 .listingBodyDotText2 {
                     opacity: 0.8;
                     font-size: 12px;
-                    margin-left: 15px;
                     margin-right: 6px;
+                    margin-left: 9px;
                 }
 
                 .listingBodyReviewText2 {
@@ -1136,13 +1135,14 @@
             }
 
     .listingBodyHostedByContainer {
-        height: 400px;
+        height: 300px;
         width: 100%;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: flex-start;
         align-items: center;
         margin-top: 30px;
+        border-bottom: 1px solid rgba(165, 165, 165, 0.2);
     }
 
         .listingBodyHostedByContainerMainLeft {
@@ -1152,15 +1152,7 @@
             flex-direction: column;
             justify-content: flex-start;
             align-items: flex-start;
-        }
-
-        .listingBodyHostedByContainerMainRight {
-            height: 100%;
-            width: 50%;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            align-items: flex-start;
+            padding-right: 100px;
         }
 
             .listingBodyHostedByProfileContainer {
@@ -1196,7 +1188,7 @@
                     flex-direction: column;
                     justify-content: center;
                     align-items: flex-start;
-                    margin-left: 15px;
+                    margin-left: 22px;
                 }
 
                     .listingBodyHostedByContainerRightHostedByText {
@@ -1221,7 +1213,7 @@
                     }
 
             .listingBodyHostedByReviewsContainer {
-                height: 10%;
+                height: 20%;
                 width: 100%;
                 display: flex;
                 flex-direction: row;
@@ -1229,12 +1221,70 @@
                 align-items: center;
             }
 
-            .fa-solid.fa-star.listingBodyHostedByStar {
-                font-size: 16px;
-                margin-bottom: 2px;
-                margin-right: 10px;
+                .fa-solid.fa-star.listingBodyHostedByStar {
+                    font-size: 16px;
+                    margin-bottom: 2px;
+                    margin-right: 10px;
+                }
+
+                .listingBodyReviewText4 {
+                    font-size: 15.5px;
+                }
+
+        .listingBodyHostedByDuringStayContainer {
+            height: 60%;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            padding-bottom: 35px;
+        }
+
+        .listingBodyHostedByDuringStayTitle {
+            font-size: 16px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        .listingBodyHostedByDuringStayDesc {
+            font-size: 16px;
+        }
+
+    .listingBodyExploreContainer {
+        height: 200px;
+        width: 100%;
+        margin: 0 -60px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+        .listingBodyExploreTitleContainer {
+            height: 25%;
+            width: 100%;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+        }
+
+            .listingBodyExploreTitle {
+                font-size: 20px;
+                font-weight: bold;
             }
 
-            .listingBodyReviewText4 {
-                font-size: 15.5px;
+        .listingBodyExploreOptionsContainer {
+            height: 25%;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+            .listingBodyExploreOption {
+                font-size: 16px;
+                color: var(--gray);
+                cursor: pointer;
+                user-select: none;
             }
