--- a/client/src/Components/Sub-Components/HomeFooter.css
+++ b/client/src/Components/Sub-Components/HomeFooter.css
@@ -12,6 +12,17 @@
     background-color: white;
 }
 
+.homeFooterContainer2 {
+    height: 50px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: white;
+}
+
     .homeFooterText {
         font-size: 14px;
         color: var(--gray);
