--- a/client/src/Components/Sub-Components/ListingBody.css
+++ b/client/src/Components/Sub-Components/ListingBody.css
@@ -1252,9 +1252,8 @@
         }
 
     .listingBodyExploreContainer {
-        height: 200px;
+        height: 150px;
         width: 100%;
-        margin: 0 -60px;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
@@ -1262,9 +1261,10 @@
     }
 
         .listingBodyExploreTitleContainer {
-            height: 25%;
+            height: 30%;
             width: 100%;
             display: flex;
+            flex-direction: row;
             justify-content: flex-start;
             align-items: center;
         }
@@ -1275,9 +1275,10 @@
             }
 
         .listingBodyExploreOptionsContainer {
-            height: 25%;
+            height: 30%;
             width: 100%;
             display: flex;
+            flex-direction: row;
             justify-content: space-between;
             align-items: center;
         }
