--- a/client/src/Components/Pages/Listing.css
+++ b/client/src/Components/Pages/Listing.css
@@ -64,7 +64,7 @@
 
             .floatingListingHeaderRightLeft {
                 height: 100%;
-                width: 50%;
+                min-width: 10%;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
@@ -143,7 +143,7 @@
 
                 .floatingListingReserveButton {
                     height: 50px;
-                    width: 100%;
+                    width: 110px;
                     display: flex;
                     flex-direction: row;
                     justify-content: center;
@@ -152,5 +152,6 @@
                     border-radius: 10px;
                     color: white;
                     font-weight: bold;
-                    font-size: 16px;
+                    font-size: 15px;
+                    cursor: pointer;
                 }
