--- a/client/src/Components/Pages/Listing.css
+++ b/client/src/Components/Pages/Listing.css
@@ -24,6 +24,7 @@
 
         .floatingListingHeaderLeft {
             height: 100%;
+            min-width: 400px;
             width: 400px;
             display: flex;
             flex-direction: row;
@@ -55,6 +56,7 @@
 
         .floatingListingHeaderRight {
             height: 100%;
+            min-width: 300px;
             width: 300px;
             display: none;
             flex-direction: row;
