--- a/client/src/Components/Sub-Components/ListingBody.css
+++ b/client/src/Components/Sub-Components/ListingBody.css
@@ -1051,7 +1051,7 @@
                             flex-direction: row;
                             justify-content: flex-start;
                             align-items: center;
-                            margin-right: 5px;
+                            margin-right: 10px;
                         }
 
                             .fullReviewProfilePic {
@@ -1179,6 +1179,7 @@
                         height: 56px;
                         width: 56px;
                         border-radius: 50%;
+                        cursor: pointer;
                     }
 
                 .listingBodyHostedByContainerRight {
@@ -1188,7 +1189,7 @@
                     flex-direction: column;
                     justify-content: center;
                     align-items: flex-start;
-                    margin-left: 22px;
+                    margin-left: 30px;
                 }
 
                     .listingBodyHostedByContainerRightHostedByText {
