--- a/client/src/Components/Pages/CreateListing.css
+++ b/client/src/Components/Pages/CreateListing.css
@@ -1,6 +1,7 @@
 .createListingContainer {
     min-height: 700px;
     height: 100vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -8,10 +9,59 @@
 }
 
     .createListingHeader {
-        height: 80px;
+        height: 100px;
         width: 100%;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        padding: 0 60px;
     }
+
+        .createListingHeaderLeft {
+            height: 100%;
+            width: 50%;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: center;
+        }
+
+            .createListingHeaderLogo {
+                height: 30px;
+                width: auto;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                user-select: none;
+            }
+
+        .createListingHeaderRight {
+            height: 100%;
+            width: 50%;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-end;
+            align-items: center;
+        }
+
+            .createListingHeaderRightButton {
+                height: 40px;
+                width: 60px;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                border-radius: 20px;
+                border: 1px solid rgba(160, 160, 160, 0.4);
+                font-weight: bold;
+                font-size: 13px;
+                cursor: pointer;
+                transition: 0.1s linear;
+            }
+
+            .createListingHeaderRightButton:hover {
+                transition: 0.1s linear;
+                border: 1px solid var(--black);
+            }
