--- a/client/src/Components/Pages/CreateListing.css
+++ b/client/src/Components/Pages/CreateListing.css
@@ -203,6 +203,7 @@
                 border-radius: 10px;
                 font-size: 16px;
                 font-weight: bold;
+                cursor: pointer;
             }
 
             .createListingSubBody1Left {
